--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>ยินดีต้อนรับ Proplante</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="admin-lte/plugins/fontawesome-free/css/all.min.css"> 
+  <link rel="stylesheet" href="admin-lte/plugins/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
   <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
@@ -167,7 +167,7 @@
    <div class="modal" id="modal-loading" data-keyboard="false" data-backdrop="static" style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
     <div class="modal-dialog" style="margin-top:50vh ;">
       <div id="bg-loading" style="display:block;width:100%; height:100%">
-        <div class="loader-wrapper" id="loader-1">
+        <div class="loader-wrapper">
           <div id="loader"></div>
         </div>
       </div>
@@ -183,6 +183,7 @@
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
   <script src="js/connectServer.js"></script>
+  <script src="js/mutilplePageunction.js"></script>
   <script src="js/firebaseAuthen.js"></script>
   <script src="js/authenSelect.js"></script>
 
