--- a/public/managers.html
+++ b/public/managers.html
@@ -53,7 +53,7 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
           <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
-            <i class="fas fa-grip-vertical"></i>
+            <i class="fas fa-th-large"></i>
           </a>
           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
             <a id="new-manager-btn" class="dropdown-item text-success" data-target="#modal-manager"
@@ -206,7 +206,7 @@
                   aria-hidden="true">แก้ไขข้อมูล</button></li>
               <li id="dd-header" class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
-                  <i class="fas fa-grip-vertical"></i>
+                  <i class="fas fa-th-large"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                   <a id="new-manager-btn" class="dropdown-item text-success" data-target="#modal-manager"
