--- a/public/activities.html
+++ b/public/activities.html
@@ -16,30 +16,38 @@
   <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/allelements.css">
   <link rel="stylesheet" href="css/activitiesStyle.css">
   <link rel="stylesheet" href="css/loader-1.css">
+  <link rel="stylesheet" href="css/allelements.css">
 
 </head>
 
 <body class="hold-transition sidebar-mini">
   <div class="wrapper">
-    <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
-      <!--  -->
-      <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item" id="hamburger">
           <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
         </li>
-      </ul>
-      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <button id="new-activity-btn" class="btn bg-olive bt-progressive-nav" data-toggle="modal"
-            data-target="#modal-add-activity" onclick="getLandName()">เพิ่มกิจกรรม</button>
+          <a class="nav-link">
+            <p id="extend-header">กิจกรรมทั้งหมด</p>
+          </a>
         </li>
       </ul>
-
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
+            <i class="fas fa-th-large"></i>
+          </a>
+          <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+            <a id="new-activity-btn" class="dropdown-item text-success" data-toggle="modal"
+            data-target="#modal-add-activity">
+              <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">เพิ่มกิจกรรมใหม่</span>
+            </a>
+          </div>
+        </li>
+      </ul>
     </nav>
     <!-- /.navbar -->
 
@@ -146,29 +154,24 @@
     </aside>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper" style="min-height: 700px;">
+    <div class="content-wrapper">
       <!-- Content Header (Page header) -->
-      <section class="content-header">
-        <div class="container-fluid">
-          <table id="header-mobile">
-            <tr class="text-success">
-              <td>
-                <h4 class="text-success">กิจกรรมทั้งหมด</h4>
-              </td>
-            </tr>
-          </table>
-
-          <div id="bar-header">
-            <div class="bar-col-header">
-              <h4 class="text-success">กิจกรรมทั้งหมด</h4>
-            </div>
-            <div class="bar-col-header" style="text-align: right;">
-              <button id="new-activity-btn" class="btn bg-olive bt-custom-hrader" onclick="getLandName()"
-                data-toggle="modal" data-target="#modal-add-activity">เพิ่มกิจกรรม</button>
-            </div>
-          </div>
-          <hr>
-        </div><!-- /.container-fluid -->
+      <section class="content-header right-header-btn">
+        <nav class="navbar navbar-expand navbar-white navbar-light">
+          <ul class="navbar-nav text-success">
+            <li id="header-report-list">
+              <h4>
+                กิจกรรมทั้งหมด
+              </h4>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <button id="new-activity-btn" class="btn bg-olive" data-toggle="modal" data-target="#modal-add-activity"><span>เพิ่มกิจกรรม</span></button>
+            </li>
+          </ul>
+        </nav>
+        <hr>
       </section>
 
       <!-- Main content -->
@@ -265,6 +268,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
   <!-- firebase -->
   <script src="js/connectServer.js"></script>
+  <script src="js/mutilplePageunction.js"></script>
   <script src="js/activityBar.js"></script>
   <script src="js/activitiesFunc.js"></script>
   <script src="js/navBarLinks.js"></script>
