--- a/public/addActivity.html
+++ b/public/addActivity.html
@@ -22,7 +22,7 @@
    <!-- overlayScrollbars -->
    <link rel="stylesheet" href="admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
    <!-- Daterange picker -->
-   <link href="admin-lte/build/css/datepicker.css" rel="stylesheet" media="screen">
+   <link href="css/datepicker.css" rel="stylesheet" media="screen">
    <link href="//getbootstrap.com/2.3.2/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
    <link href="//getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css" rel="stylesheet">
    <!-- summernote -->
@@ -35,31 +35,45 @@
    <!-- Bootstrap4 Duallistbox -->
    <link rel="stylesheet" href="admin-lte/plugins/bootstrap4-duallistbox/bootstrap-duallistbox.min.css">
    <!-- PROPLANTE -->
-   <link rel="stylesheet" href="css/allelements.css">
    <link rel="stylesheet" href="css/addActivityPage.css">
+   <link rel="stylesheet" href="css/allelements.css">
+
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
  </head>
 
  <body class="hold-transition sidebar-mini layout-fixed">
    <div class="wrapper">
-
-     <!-- Navbar -->
      <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
-       <!-- Left navbar links -->
-       <ul class="navbar-nav">
-         <li class="nav-item" id="hamburger">
-           <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-         </li>
-         <li class="nav-item" id="forButton">
-           <div class="button">
-             <button class="btn btn-primary" type="button" id="cancelBtn">ยกเลิก</button>
-             <button class="btn bg-olive" type="button" id="saveBtn">บันทึก</button>
-           </div>
-         </li>
-
-       </ul>
-     </nav>
+      <ul class="navbar-nav">
+        <li class="nav-item" id="hamburger" style="display: none;">
+          <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+        </li>
+        <li class="nav-item" id="back-report" onclick="window.history.back()" >
+          <a class="nav-link"><i class="fa fa-arrow-left"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link">
+            <p id="rightHeaderText">กิจกรรมใหม่</p>
+          </a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
+            <i class="fas fa-th-large"></i>
+          </a>
+          <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+            <a id="activity-progress-btn" class="dropdown-item text-success" data-toggle="modal" onclick="toUpdateProgress()">
+              <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">บันทึก</span>
+            </a>
+            <a id="activity-progress-btn" class="dropdown-item text-success" data-toggle="modal" onclick="toUpdateProgress()">
+              <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">ยกเลิก</span>
+            </a>
+          </div>
+        </li>
+      </ul>
+    </nav>
      <!-- /.navbar -->
 
      <!-- Main Sidebar Container -->
@@ -166,49 +180,37 @@
 
      <!-- Content Wrapper. Contains page content -->
      <div class="content-wrapper">
-       <section class="content-header managers-main">
-         <div class="container-fluid">
-           <table id="header-mobile">
-             <tr class="text-success">
-               <td>
-                 <a onclick="window.history.back()" class="text-success" style="cursor:pointer">
-                   <i class="fa fa-arrow-left"></i>
-                   &nbsp;&nbsp;
-                 </a>
-               </td>
-               <td>
-                 <h4 id="rightHeaderText" class="text-success" style="display:inline">กิจกรรมใหม่</h4>
-               </td>
-             </tr>
-           </table>
-           <div id="bar-header">
-             <div class="bar-col-header">
-               <table>
-                 <tr class="text-success">
-                   <td>
-                     <a onclick="window.history.back()" class="text-success">
-                       <h4 id="leftHeaderText" class="h4-header">กิจกรรมทั้งหมด</h4>
-                     </a>
-                   </td>
-                   <td>
-                     &nbsp;&nbsp;
-                     <i class="fa fa-angle-right"></i>
-                     &nbsp;&nbsp;
-                   </td>
-                   <td>
-                     <h4 id="rightHeaderText">กิจกรรมใหม่ </h4>
-                   </td>
-                 </tr>
-               </table>
-             </div>
-             <div class="bar-col-header" style="text-align: right;">
-               <button class="btn btn-primary" type="button" id="cancelBtn" onclick="clearField()">ยกเลิก</button>
-               <button class="btn bg-olive" type="button" id="saveBtn" onclick="postToDatabase()">บันทึก</button>
-             </div>
-           </div>
-           <hr>
-         </div><!-- /.container-fluid -->
-       </section>
+       <section class="content-header right-header-btn">
+        <nav class="navbar navbar-expand navbar-white navbar-light">
+          <ul class="navbar-nav text-success">
+            <li id="header-activity-detail">
+              <h4>
+                <span class="mobile-v-header" onclick="window.history.back()" style="cursor: pointer;"><i
+                    class="fa fa-arrow-left"></i>&nbsp;&nbsp;</span>
+                <span id="leftHeaderText" class="max-v-header" onclick="window.history.back()" style="cursor: pointer;">กิจกรรมทั้งหมด&nbsp;&nbsp;<i
+                    class="fa fa-angle-right"></i>&nbsp;&nbsp;</span>
+              </h4>
+            </li>
+            <li>
+            </li>
+            <li>
+              <h4 id="rightHeaderText"> กิจกรรมใหม่</h4>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto right-header-btn">
+            <li class="nav-item">
+              <button id="cancelBtn" class="btn btn-primary" onclick="clearField()"><span
+                  id="tetx-btn-header">ยกเลิก</span></button>
+            </li>
+            <li class="nav-item">&nbsp;</li>
+            <li class="nav-item">
+              <button id="activity-progress-btn" class="btn bg-olive" onclick="postToDatabase()"><span
+                id="saveBtn">บันทึก</span></button>
+            </li>
+          </ul>
+        </nav>
+        <hr>
+      </section>
        <section class="content">
          <div class="container-fluid">
            <div id="addActivity">
@@ -293,15 +295,15 @@
    <script src="https://apis.google.com/js/platform.js" async defer></script>
    <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
    <!-- firebase -->
-   <script src="build/js/connectServer.js"></script>
-   <script src="build/js/mutilplePageunction.js"></script>
-   <script src="build/js/addActivity.js"></script>
-   <script src="build/js/navBarLinks.js"></script>
+   <script src="js/connectServer.js"></script>
+   <script src="js/mutilplePageunction.js"></script>
+   <script src="js/addActivity.js"></script>
+   <script src="js/navBarLinks.js"></script>
 
    <!-- jQuery -->
-   <script src="plugins/jquery/jquery.min.js"></script>
+   <script src="admin-lte/plugins/jquery/jquery.min.js"></script>
    <!-- jQuery UI 1.11.4 -->
-   <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
+   <script src="admin-lte/plugins/jquery-ui/jquery-ui.min.js"></script>
    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
    <script>
      $.widget.bridge('uibutton', $.ui.button)
