--- a/public/calendar.html
+++ b/public/calendar.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- fullCalendar -->
   <link rel="stylesheet" href="admin-lte/plugins/fullcalendar/main.min.css">
-  <link rel="stylesheet" href="admin-lte/plugins/fullcalendar-interaction/main.min.css">
+  <!-- <link rel="stylesheet" href="admin-lte/plugins/fullcalendar-interaction/main.min.css"> -->
   <link rel="stylesheet" href="admin-lte/plugins/fullcalendar-daygrid/main.min.css">
   <link rel="stylesheet" href="admin-lte/plugins/fullcalendar-timegrid/main.min.css">
   <link rel="stylesheet" href="admin-lte/plugins/fullcalendar-bootstrap/main.min.css">
@@ -28,12 +28,15 @@
 
 <body class="hold-transition sidebar-mini ">
   <div class="wrapper">
-    <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
-      <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item" id="hamburger">
           <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link">
+            <p id="extend-header">ตารางงาน</p>
+          </a>
         </li>
       </ul>
     </nav>
@@ -149,7 +152,7 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
-      <section class="content-header">
+      <!-- <section class="content-header">
         <div class="container-fluid">
           <table id="header-mobile">
             <tr class="text-success">
@@ -165,8 +168,21 @@
             </div>
           </div>
           <hr>
-        </div><!-- /.container-fluid -->
+        </div>
+      </section> -->
+      <section class="content-header right-header-btn">
+        <nav class="navbar navbar-expand navbar-white navbar-light">
+          <ul class="navbar-nav text-success">
+            <li id="header-report-list">
+              <h4>
+                ตารางงาน
+              </h4>
+            </li>
+          </ul>
+        </nav>
+        <hr>
       </section>
+
 
       <!-- Main content -->
       <section class="content">
@@ -215,7 +231,6 @@
                           remove after drop
                         </label>
                       </div>
-                      <img src="https://proplante-manager.s3-eu-west-1.amazonaws.com/door.png">
                     </div>
                   </div>
                   <!-- /.card-body -->
@@ -267,6 +282,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
   <!-- firebase -->
   <script src="js/connectServer.js"></script>
+  <script src="js/mutilplePageunction.js"></script>
   <script src="js/activityBar.js"></script>
   <script src="js/calendarFunc.js"></script>
   <script src="js/navBarLinks.js"></script>
