--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,6 @@
   <link rel="stylesheet" href="css/allelements.css">
   <link rel="stylesheet" href="css/MainPage.css">
   <link rel="stylesheet" href="css/loader-1.css">
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
@@ -38,7 +37,7 @@
 <body class="hold-transition sidebar-mini layout-fixed">
   <div class="wrapper">
     <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
+    <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav" style="margin-bottom:0px">
       <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item" id="hamburger">
@@ -254,20 +253,16 @@
       </div>
       <div id="img-out"></div>
       <div id="widget" style="width: 90px;">
+        <!-- <input type="text" value="10" class="knob pie-chart" data-width="90" data-height="90" data-fgcolor="#F76647" data-readonly="true" readonly="readonly" >
+        <input type="text" value="30" class="knob pie-chart" data-width="90" data-height="90" data-fgcolor="#F76647" data-readonly="true" readonly="readonly" > -->
       </div>
-      <!-- /.content-wrapper -->
-      <!-- Control Sidebar -->
-      <aside class="control-sidebar control-sidebar-light">
-        <!-- Control sidebar content goes here -->
-      </aside>
-      <!-- /.control-sidebar -->
     </div>
 
   <!--! LOADING MODAL -->
   <div class="modal" id="modal-loading" data-keyboard="false" data-backdrop="static" style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
-    <div class="modal-dialog" style="margin-top:50vh ;">
+    <div class="modal-dialog" style="margin-top:30vh ;">
       <div id="bg-loading" style="display:block;width:100%; height:100%">
-        <div class="loader-wrapper" id="loader-1">
+        <div class="loader-wrapper">
           <div id="loader"></div>
         </div>
       </div>
