--- a/public/plantPage.html
+++ b/public/plantPage.html
@@ -11,23 +11,10 @@
   <link rel="stylesheet" href="admin-lte/plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Tempusdominus Bbootstrap 4 -->
-  <link rel="stylesheet" href="admin-lte/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- JQVMap -->
-  <link rel="stylesheet" href="admin-lte/plugins/jqvmap/jqvmap.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
   <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-  <!-- Daterange picker -->
-  <link rel="stylesheet" href="admin-lte/plugins/daterangepicker/daterangepicker.css">
-  <!-- summernote -->
-  <link rel="stylesheet" href="admin-lte/plugins/summernote/summernote-bs4.css">
+  <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
   <!-- PROPLANTE -->
   <link rel="stylesheet" href="css/loader-1.css">
   <link rel="stylesheet" href="css/addActivityPage.css">
@@ -52,16 +39,21 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
           <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
-            <i class="fas fa-grip-vertical"></i>
+            <i class="fas fa-th-large"></i>
           </a>
           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
             <a id="new-activity-btn" class="dropdown-item text-success" data-toggle="modal">
               <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">เพิ่มพืชใหม่</span>
             </a>
             <div class="dropdown-divider"></div>
+            <a id="dd-edit-plant" class="dropdown-item text-warning del-plant-btn" data-toggle="modal">
+              <i class="fas fa-pen-fancy"></i> แก้ไขพืช
+            </a>
+            <div class="dropdown-divider"></div>
             <a id="dd-del-plant" class="dropdown-item text-danger del-plant-btn">
               <i class="fas fa-trash mr-2"></i> ลบพืช
             </a>
+
           </div>
         </li>
       </ul>
@@ -195,13 +187,18 @@
             </li>
             <li class="nav-item dropdown del-plant-btn">
               <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
-                <i class="fas fa-grip-vertical"></i>
+                <i class="fas fa-th-large"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                <div class="dropdown-divider"></div>
+                <a id="dd-edit-plant" class="dropdown-item text-warning del-plant-btn" data-toggle="modal">
+                  <i class="fas fa-pen-fancy"></i> แก้ไขพืช
+                </a>
                 <div class="dropdown-divider"></div>
                 <a id="dd-del-plant" class="dropdown-item text-danger">
                   <i class="fas fa-trash mr-2"></i> ลบพืช
                 </a>
+
               </div>
             </li>
           </ul>
@@ -259,8 +256,8 @@
           </div>
           <div id="modal-plant-success" style="display: none;">
             <center>
-              <h3>
-                เพิ่มพืชสำเร็จ
+              <h3 id="modal-plant-status">
+
               </h3>
             </center>
             <div style="width: 100%; text-align:right;">
@@ -296,7 +293,7 @@
                   im-insert="true">
               </div>
               </div>
-              
+
               <div id="err-div-modal"></div>
             </form>
             <div style="width: 100%; text-align:center;">
@@ -353,41 +350,19 @@
   <script src="js/plantFunc.js"></script>
 
   <!-- jQuery -->
-  <script src="admin-lte/plugins/jquery/jquery.min.js"></script>
-  <!-- jQuery UI 1.11.4 -->
-  <script src="admin-lte/plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-  <script>
-    $.widget.bridge('uibutton', $.ui.button)
+<script src="admin-lte/plugins/jquery/jquery.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- AdminLTE App -->
+<script src="admin-lte/dist/js/adminlte.min.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="admin-lte/dist/js/demo.js"></script>
 
-  </script>
-  <!-- Bootstrap 4 -->
-  <script src="admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- ChartJS -->
-  <script src="admin-lte/plugins/chart.js/Chart.min.js"></script>
-  <!-- Sparkline -->
-  <script src="admin-lte/plugins/sparklines/sparkline.js"></script>
-  <!-- JQVMap -->
-  <script src="admin-lte/plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="admin-lte/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-  <!-- jQuery Knob Chart -->
-  <script src="admin-lte/plugins/jquery-knob/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
-  <script src="admin-lte/plugins/moment/moment.min.js"></script>
-  <script src="admin-lte/plugins/daterangepicker/daterangepicker.js"></script>
-  <!-- Tempusdominus Bootstrap 4 -->
-  <script src="admin-lte/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <!-- Summernote -->
-  <script src="admin-lte/plugins/summernote/summernote-bs4.min.js"></script>
   <!-- InputMask -->
   <script src="admin-lte/plugins/moment/moment.min.js"></script>
   <script src="admin-lte/plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
-  <!-- overlayScrollbars -->
-  <script src="admin-lte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="admin-lte/dist/js/adminlte.js"></script>
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="admin-lte/dist/js/pages/dashboard.js"></script>
+
+
   <!-- AdminLTE for demo purposes -->
   <script src="admin-lte/dist/js/demo.js"></script>
   <!-- firebase -->
