--- a/public/reportPerLand.html
+++ b/public/reportPerLand.html
@@ -28,8 +28,6 @@
   <div class="wrapper">
 
     <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav">
-      <!--  -->
-      <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item" id="hamburger">
           <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
@@ -157,7 +155,7 @@
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
-      <section class="content-header report-header">
+      <section class="content-header">
         <nav class="navbar navbar-expand navbar-white navbar-light">
           <ul class="navbar-nav text-success">
             <li id="header-report-list">
