--- a/public/landDetail.html
+++ b/public/landDetail.html
@@ -426,7 +426,7 @@
               <div id="err-div-modal" class="text-danger"></div>
             </form>
             <div style="width: 100%; text-align:center;">
-              <button id="save-harvested-product" class="btn bg-olive">&nbsp;เริ่มการดูแล&nbsp;</button>
+              <button id="save-start-cycle" class="btn bg-olive">&nbsp;เริ่มการดูแล&nbsp;</button>
             </div>
           </div>
         </div>
