--- a/public/activities.html
+++ b/public/activities.html
@@ -241,9 +241,9 @@
   </div>
   <!--! LOADING MODAL -->
   <div class="modal" id="modal-loading" style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
-    <div class="modal-dialog" style="margin-top:50vh ;">
+    <div class="modal-dialog" style="margin-top:30vh ;">
       <div id="bg-loading" style="display:block;width:100%; height:100%">
-        <div class="loader-wrapper" id="loader-1">
+        <div class="loader-wrapper">
           <div id="loader"></div>
         </div>
       </div>
