--- a/public/addland.html
+++ b/public/addland.html
@@ -98,9 +98,6 @@
         <!-- Sidebar Menu -->
 
         <div id="inputLand">
-
-
-
         </div>
 
         <nav class="mt-2">
@@ -181,12 +178,17 @@
     </div>
     <!-- /.modal-dialog -->
   </div>
-  <!-- MODAL -->
-  <div id="bg-loading">
-    <div class="loader-wrapper" id="loader-1">
-      <div id="loader"></div>
+  <!--! LOADING MODAL -->
+  <div class="modal" id="modal-loading" data-keyboard="false" data-backdrop="static" style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
+    <div class="modal-dialog" style="margin-top:30vh ;">
+      <div id="bg-loading" style="display:block;width:100%; height:100%">
+        <div class="loader-wrapper">
+          <div id="loader"></div>
+        </div>
+      </div>
     </div>
   </div>
+  <!--! LOADING MODAL -->
   <!-- PROPLANTE -->
 
   <!-- firebase -->
