--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Tempusdominus Bbootstrap 4 -->
   <link rel="stylesheet" href="admin-lte/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-    <!-- JQVMap -->
+  <!-- JQVMap -->
   <link rel="stylesheet" href="admin-lte/plugins/jqvmap/jqvmap.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="admin-lte/dist/css/adminlte.min.css">
@@ -37,7 +37,7 @@
 <body class="hold-transition sidebar-mini layout-fixed">
   <div class="wrapper">
     <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light" id="topnav" style="margin-bottom:0px">
+    <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="margin-bottom:0px; ">
       <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item" id="hamburger">
@@ -51,53 +51,49 @@
               class="fa fa-filter"></i></a>
         </li>
         <div id="filterMainPageDiv">
-
           <div class="dropdown" id="dropdown-main">
-            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" id="dd-button"
-              type="button">
+            <button id="provice-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown" aria-expanded="false">
+              <!-- <input  type="button" value="จังหวัด"> -->
               จังหวัด
             </button>
             <div class="dropdown-menu" role="menu" id="provice-dropdown">
-              <a class="dropdown-item" role="presentation" href="#"
-              onClick="setFilterValueOnclick('all')">ทั้งหมด</a>
+              <a class="dropdown-item" role="presentation" onClick="setFilterValueOnclick('province','all')">ทั้งหมด</a>
             </div>
           </div>
           <div class="dropdown" id="dropdown-main">
-            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false" id="dd-button"
-              type="button">
+            <button disabled id="district-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown" aria-expanded="false">
+              <!-- <input  type="button" value="อำเภอ" disabled> -->
               อำเภอ
             </button>
             <div class="dropdown-menu" role="menu" id="district-dropdown">
-              <a class="dropdown-item" role="presentation" href="#"
-                onClick="setFilterValueOnclick('all')">ทั้งหมด</a>
+              <a class="dropdown-item" role="presentation" onClick="setFilterValueOnclick('district','all')">ทั้งหมด</a>
             </div>
           </div>
           <div class="dropdown" id="dropdown-main">
-            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
-              id="land-name-filter" type="button">
+            <button id="land-name-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown" aria-expanded="false">
+              <!-- <input  type="button" value="ที่ดิน"> -->
               ที่ดิน
             </button>
             <div class="dropdown-menu" role="menu" id="land-dropdown">
-              <a class="dropdown-item" role="presentation" href="#"
-                onClick="setFilterValueOnclick('ที่ดิน','all')">ทั้งหมด</a>
+              <a class="dropdown-item" role="presentation" onClick="setFilterValueOnclick('land','all')">ทั้งหมด</a>
             </div>
           </div>
+
           <div class="dropdown" id="dropdown-main">
-            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
-              id="plant-filter" type="button">
+            <button id="plant-filter" class="btn btn-primary dropdown-toggle land-filter" data-toggle="dropdown" aria-expanded="false">
+              <!-- <input  type="button" value="พืช"> -->
               พืช
             </button>
             <div class="dropdown-menu" role="menu" id="plant-dropdown">
-              <a class="dropdown-item" role="presentation" href="#"
-                onClick="setFilterValueOnclick('พืช','all')">ทั้งหมด</a>
+              <a class="dropdown-item" role="presentation" onClick="setFilterValueOnclick('plant','all')">ทั้งหมด</a>
             </div>
           </div>
-          <div id="filterContainerDiv" class="row">
+          <!-- <div id="filterContainerDiv" class="row">
 
             <div class="dropdown" id="dropdown-main">
               <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
                 id="dd-button" type="button">
-                จังหวัด
+                จังหวัดfff
               </button>
               <div class="dropdown-menu" role="menu" id="provice-dropdown">
                 <a class="dropdown-item" role="presentation" href="#"
@@ -133,8 +129,8 @@
                 <a class="dropdown-item" role="presentation" href="#"
                 onClick="setFilterValueOnclick('พืช','all')">ทั้งหมด</a>
               </div>
-            </div>
-          </div>
+            </div> -->
+        </div>
       </ul>
     </nav>
     <!-- /.navbar -->
@@ -180,7 +176,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a  class="nav-link" id="navBarSchedule">
+              <a class="nav-link" id="navBarSchedule">
                 <i class="fas fa-calendar-alt"></i>
                 <p>
                   &nbsp;&nbsp; ตารางงาน
@@ -188,7 +184,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a  class="nav-link" id="navBarActivity">
+              <a class="nav-link" id="navBarActivity">
                 <i class="fas fa-list-alt"></i>
                 <p>
                   &nbsp;&nbsp; กิจกรรมทั้งหมด
@@ -223,9 +219,8 @@
             </li>
           </ul>
         </nav>
-        <nav class="mt-2"  style="position: absolute; bottom:50px">
-          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview"
-            role="menu" data-accordion="false">
+        <nav class="mt-2" style="position: absolute; bottom:50px">
+          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <li class="nav-item " id="nav-signout" onclick="signOut()">
               <a href="#logout" class="nav-link text-danger" id="nav-signout">
                 <i class="fas fa-sign-out-alt" id="nav-signout"></i>
@@ -253,20 +248,21 @@
       </div>
       <div id="img-out"></div>
       <div id="widget" style="width: 90px;">
-       </div>
+      </div>
     </div>
 
-  <!--! LOADING MODAL -->
-  <div class="modal" id="modal-loading" data-keyboard="false" data-backdrop="static" style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
-    <div class="modal-dialog" style="margin-top:30vh ;">
-      <div id="bg-loading" style="display:block;width:100%; height:100%">
-        <div class="loader-wrapper">
-          <div id="loader"></div>
+    <!--! LOADING MODAL -->
+    <div class="modal" id="modal-loading" data-keyboard="false" data-backdrop="static"
+      style="display: none; top:0 ;background: #ffffff" aria-hidden="true">
+      <div class="modal-dialog" style="margin-top:30vh ;">
+        <div id="bg-loading" style="display:block;width:100%; height:100%">
+          <div class="loader-wrapper">
+            <div id="loader"></div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!--! LOADING MODAL -->
+    <!--! LOADING MODAL -->
     <!-- ./wrapper -->
     <script src="admin-lte/plugins/jquery/jquery.min.js"></script>
 
@@ -277,7 +273,6 @@
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
       $.widget.bridge('uibutton', $.ui.button)
-
     </script>
     <!-- Bootstrap 4 -->
     <script src="admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
