--- a/public/landDetail.html
+++ b/public/landDetail.html
@@ -410,6 +410,7 @@
                     --เลือกพืช--
                   </button>
                   <div class="dropdown-menu" role="menu" id="plant-dropdown">
+                    <a class="dropdown-item text-primary" role="presentation" href="plantPage.html">+ เพิ่มพืชใหม่</a>
                   </div>
                 </div>
                 <!-- /.input group -->
