--- a/public/plantPage.html
+++ b/public/plantPage.html
@@ -185,7 +185,7 @@
               <button id="new-activity-btn" class="btn bg-olive" data-toggle="modal"><span
                   id="tetx-btn-header">เพิ่มพืชใหม่</span></button>
             </li>
-            <li class="nav-item dropdown del-plant-btn">
+            <li id="menu-dropdown" class="nav-item dropdown del-plant-btn">
               <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
                 <i class="fas fa-th-large"></i>
               </a>
@@ -208,6 +208,7 @@
       <!-- Main content -->
       <section class="content">
         <div class="container-fluid">
+          <center id="noPlant" style="color: gray;"></center>
           <output id="plant-list">
           </output>
           <div id="plant-detail"></div>
@@ -228,7 +229,7 @@
             <form role="form">
               <div class="form-group">
                 <p style="margin-bottom:0px">ชื่อพืช<span class="sp-require">&nbsp;*</span></p>
-                <input required type="text" placeholder="ชื่อพืช เช่น มันสำปะหลัง" class="form-control"
+                <input autocomplete="off" required type="text" placeholder="ชื่อพืช เช่น มันสำปะหลัง" class="form-control"
                   id="inputPlantName">
               </div>
               <div id="err-div-modal"></div>
@@ -282,13 +283,13 @@
                 <div class="form-group">
                   <p style="margin-bottom:0px">กิจกรรม<span class="sp-require">&nbsp;*</span></p>
                   <div class="input-group">
-                  <input required type="text" placeholder="กิจกรรม เช่น รดน้ำ" class="form-control" id="inputPlantAc">
+                  <input autocomplete="off" required type="text" placeholder="กิจกรรม เช่น รดน้ำ" class="form-control" id="inputPlantAc">
                 </div>
                 </div>
               <div class="form-group">
                 <p style="margin-bottom:0px">สัปดาห์ที่<span class="sp-require">&nbsp;*</span></p>
               <div class="input-group">
-                <input id="inputPlantDura" required type="text" class="form-control"
+                <input autocomplete="off" id="inputPlantDura" required type="text" class="form-control"
                   data-inputmask="'mask': ['9','99','999']" data-mask=""
                   im-insert="true">
               </div>
