--- a/public/addActivity.html
+++ b/public/addActivity.html
@@ -64,10 +64,10 @@
             <i class="fas fa-th-large"></i>
           </a>
           <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-            <a id="activity-progress-btn" class="dropdown-item text-success" data-toggle="modal" onclick="toUpdateProgress()">
+            <a id="activity-progress-btn" class="dropdown-item text-success" data-toggle="modal"  onclick="postToDatabase()">
               <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">บันทึก</span>
             </a>
-            <a id="activity-progress-btn" class="dropdown-item text-success" data-toggle="modal" onclick="toUpdateProgress()">
+            <a id="cancelBtn" class="dropdown-item text-danger" data-toggle="modal" onclick="clearField()">
               <i class="fas fa-seedling mr-2"></i> <span id="tetx-btn-header">ยกเลิก</span>
             </a>
           </div>
